# challenge-promtior

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/src/: __init__.py
backend/src/api/: __init__.py  app.py
backend/src/data_ingestion/: __init__.py  chunker.py  pdf_loader.py  pipeline.py  web_scraper.py
backend/src/rag/: __init__.py  chain.py  llm.py  retriever.py
backend/src/vector_store/: __init__.py  embedder.py  init_vector_store.py  store.py
backend/tests/: __init__.py  test_ingestion.py  test_rag_pipeline.py  test_vector_store.py
doc/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  SETUP.md
frontend/: .gitkeep  Dockerfile  jest.config.js  next.config.js  package.json  postcss.config.js  postcss.config.mjs  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatBox.tsx  Header.tsx  InputBar.tsx
frontend/lib/: api.ts
frontend/styles/: globals.css  index.css
scripts/: README.md  dev.sh  quickstart.sh  test.sh
